# rtamt

./: .gitignore  Dockerfile  LICENSE  LICENSE.txt  README.md  README_IASTL_extentions.md  README_cmake.md  README_docker.md  README_extensions.md  README_syntax_extensions.md  TLimp.md  license.txt  pyproject.toml  requirements.txt  setup.py  setup_old.py  temp.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
docs/: TLimp.md
examples/: arg.py  class_factory.py  monitor_basic.py  monitor_iostl.py  monitor_offline.py  monitor_offline_debug.py  monitor_stl_ct.py  monitor_stl_ct_io.py  multi_inheriting_skeleton.py  offline_monitor_ct.py  offline_monitor_ct_2.py
examples/ad_monitors/: README.md  monitor.py  mttc.stl  simulation_data.csv  ttc.stl
examples/basic/: monitor_basic.py  monitor_basic_2.py  monitor_basic_cpp.py  monitor_basic_ltl.py  monitor_iostl.py  monitor_ltl_discrete_time_online_python.py  monitor_offline.py  monitor_offline_debug.py  monitor_stl_ct.py  monitor_stl_ct_io.py  monitor_stl_dense_time.py  monitor_stl_dense_time_online_python.py  monitor_stl_discrete_time_offline_python.py  monitor_stl_discrete_time_offline_python_from_file.py  monitor_stl_discrete_time_online_cpp.py  monitor_stl_discrete_time_online_python.py  spec.stl
examples/debug/: offline_example.py
examples/debug_2020a/: debug_with_empty_monitor.m  debug_with_rtamt_monitor_2017b.m  debug_with_rtamt_monitor_s1.m  debug_with_rtamt_monitor_s2.m  debug_with_rtamt_monitor_with_bug.m  debug_without_monitor.m  empty_monitor.m  online_monitor.m  online_monitor_s2.m  online_monitor_with_bug.m  online_monitoring_demo.m  sf_aircraft.slx  sf_aircraft_ModeType.m  sf_aircraft_with_empty_monitor.slx  sf_aircraft_with_rtamt_monitor.slx  sf_aircraft_with_rtamt_monitor_2017b.slx  sf_aircraft_with_rtamt_monitor_s1.slx  sf_aircraft_with_rtamt_monitor_s2.slx  sf_aircraft_with_rtamt_monitor_with_bug.slx
examples/documentation/: example_evaluation_subformulas.py  example_print_pastification.py  example_usage_stl_dense_time_offline.py  example_usage_stl_dense_time_online.py  example_usage_stl_discrete_time_online.py  time_units_1.py  time_units_2.py  time_units_3.py  time_units_4.py  time_units_5.py  time_units_6.py  time_units_7.py  time_units_8.py
examples/experiments/: dense_time.py  discrete_time.py  discrete_vs_dense_time.py  exp1.py  exp2.py  pythoncpp.py
examples/issue26/: dataProhibitHardFail.binaryfile  issue_semantics.py  scenarioParams.py  webotPlotLib.py  webotPyLib.py
examples/journal/: IASTL_dense_time_offline.py  STL_dense_time_offline.py  STL_dense_time_online.py  dense_time.py  discrete_time.py  discrete_vs_dense_time.py  examples.py  globally.py  historically.py  pythoncpp.py  robustness.py  since.py  spec.stl  spec_1.stl  spec_2.stl  unitl.py
examples/offline_monitors/: README  README.md  example2.csv  example3.csv  example4.csv  offline_ltl.py  offline_monitor_ct.py  offline_monitor_dense_time.py  offline_monitor_dense_time_with_constants_and_subspecs.py  offline_monitor_discrete_time.py  offline_monitor_discrete_time_rev.py  offline_monitor_discrete_time_with_constants_and_subspecs.py  offline_monitor_dt.py  offline_monitor_dt_refactored.py  offline_monitor_with_constants_and_subspecs.py  offline_stl.py  test_printName.py
examples/online_monitors/: online_monitor_ct.py  online_monitor_dense_time.py
figures/: XSTLclass.drawio
issues/: issue_no25.py  issue_no27.py
rtamt/: CMakeLists.txt  __init__.py
rtamt/cpplib/stl/rtamt_stl_library/: CMakeLists.txt
rtamt/cpplib/stl/rtamt_stl_library/include/rtamt_stl_library/: stl_abs_node.h  stl_addition_node.h  stl_always_node.h  stl_and_node.h  stl_combinatorial_binary_node.h  stl_comp_op.h  stl_constant_node.h  stl_division_node.h  stl_eventually_node.h  stl_exp_node.h  stl_fall_node.h  stl_historically_bounded_node.h  stl_historically_node.h  stl_iff_node.h  stl_implies_node.h  stl_io_type.h  stl_multiplication_node.h  stl_node.h  stl_not_node.h  stl_once_bounded_node.h  stl_once_node.h  stl_operator_type.h  stl_or_node.h  stl_pow_node.h  stl_precedes_bounded_node.h  stl_predicate_node.h  stl_previous_node.h  stl_rise_node.h  stl_sample.h  stl_since_bounded_node.h  stl_since_node.h  stl_sqrt_node.h  stl_subtraction_node.h  stl_xor_node.h
rtamt/cpplib/stl/rtamt_stl_library/src/: stl_abs_node.cpp  stl_addition_node.cpp  stl_always_node.cpp  stl_combinatorial_binary_node.cpp  stl_constant_node.cpp  stl_division_node.cpp  stl_eventually_node.cpp  stl_exp_node.cpp  stl_fall_node.cpp  stl_historically_bounded_node.cpp  stl_historically_node.cpp  stl_multiplication_node.cpp  stl_not_node.cpp  stl_once_bounded_node.cpp  stl_once_node.cpp  stl_pow_node.cpp  stl_precedes_bounded_node.cpp  stl_predicate_node.cpp  stl_previous_node.cpp  stl_rise_node.cpp  stl_since_bounded_node.cpp  stl_since_node.cpp  stl_sqrt_node.cpp  stl_subtraction_node.cpp
rtamt/cpplib/stl/rtamt_stl_library_wrapper/: CMakeLists.txt  __init__.py
rtamt/cpplib/stl/rtamt_stl_library_wrapper/src/: stl_abs_node_wrapper.cpp  stl_addition_node_wrapper.cpp  stl_always_node_wrapper.cpp  stl_and_node_wrapper.cpp  stl_combinatorial_binary_node_wrapper.cpp  stl_comp_op_wrapper.cpp  stl_constant_node_wrapper.cpp  stl_division_node_wrapper.cpp  stl_eventually_node_wrapper.cpp  stl_exp_node_wrapper.cpp  stl_fall_node_wrapper.cpp  stl_historically_bounded_node_wrapper.cpp  stl_historically_node_wrapper.cpp  stl_iff_node_wrapper.cpp  stl_implies_node_wrapper.cpp  stl_io_type_wrapper.cpp  stl_multiplication_node_wrapper.cpp  stl_node_wrapper.cpp  stl_not_node_wrapper.cpp  stl_once_bounded_node_wrapper.cpp  stl_once_node_wrapper.cpp  stl_operator_type_wrapper.cpp  stl_or_node_wrapper.cpp  stl_pow_node_wrapper.cpp  stl_precedes_bounded_node_wrapper.cpp  stl_predicate_node_wrapper.cpp  stl_previous_node_wrapper.cpp  stl_rise_node_wrapper.cpp  stl_sample_wrapper.cpp  stl_since_bounded_node_wrapper.cpp  stl_since_node_wrapper.cpp  stl_sqrt_node_wrapper.cpp  stl_subtraction_node_wrapper.cpp  stl_time_wrapper.cpp  stl_xor_node_wrapper.cpp
(+1223 files in other folders)
